package edu.fiuba.algo3.modelo;

import java.util.ArrayList;

public interface Objetivo {
    public boolean objetivoCumplido(ArrayList<Pais> paises);
}
